Import of MNDRIX/Class-DBI-MSAccess-0.1.1 from CPAN.
gitpan-cpan-distribution: Class-DBI-MSAccess
gitpan-cpan-version:      0.1.1
gitpan-cpan-path:         MNDRIX/Class-DBI-MSAccess-0.1.1.tar.gz
gitpan-cpan-author:       MNDRIX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 ---
+version : 0.10.1
+date    : Tue Dec 13 12:45:08 MST 2005
+changes :
+    - Added author to META.yml
+    - Added tests to the MANIFEST
+    - Changed to a three-part version number
+---
 version : 0.01
-date    : 
+date    : Wed Dec  7 14:58:10 MST 2005
 changes :
     - First public release
