--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 ---
-version : 0.10.1
+version : 0.10.2
+date    : Tue Dec 13 14:06:51 MST 2005
+changes :
+    - Fixed the version number so it compares correctly with past versions
+---
+version : 0.1.1
 date    : Tue Dec 13 12:45:08 MST 2005
 changes :
     - Added author to META.yml
